--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </label>
         </div>
       </div>
-      <button type="submit" class="button-submit">Tell my fortune</button>
+      <button type="submit" class="button-submit">SHOW ME THE MONEY</button>
     </form>  
     <script src="script.js"></script>
   </body>
