--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p class="description">Fill in the blanks and your future will be seen.</p>
     <form action="" method="post" id="mash">
       <div id="answers" class="hide">
-        <p>Your home is in <span id="answer_1"></span> with a <span id="answer_3"></span> and loves <span id="answer_2"></span> who owns a <span id="home"></span>.
+        <p>Your humble abode is in <span id="answer_1"></span> riding around in a <span id="answer_3"></span> who is obsessed <span id="answer_2"></span> who owns a <span id="home"></span>.
       </div>
       <div class="bucket">
         <div class="choice-bucket">
